@@ -1,3 +1,8 @@
+2008-05-25  Jeffrey Stedfast  <fejj@novell.com>
+
+	* gmime/gmime-multipart-encrypted.c (g_mime_multipart_encrypted_encrypt):
+	Don't use deprecated functions.
+
 2008-05-24  Jeffrey Stedfast  <fejj@novell.com>
 
 	* gmime/gmime-stream.c (stream_eos): Fixed a typo.
